// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/locationIdToNames renders correctly 1`] = `
<li
  key="0"
>
  <Link
    replace={false}
    to="/focus-investigation/view/f45b9380-c970-4dd1-8533-9e95ab12f128"
  >
    <a
      href="/focus-investigation/view/f45b9380-c970-4dd1-8533-9e95ab12f128"
      onClick={[Function]}
    >
      Namibia
    </a>
  </Link>
  <h2
    className="mock-child"
  >
    Mock child render function
  </h2>
</li>
`;

exports[`src/components/locationIdToNames renders correctly 2`] = `
<li
  key="1"
>
  <Link
    replace={false}
    to="/focus-investigation/view/3951"
  >
    <a
      href="/focus-investigation/view/3951"
      onClick={[Function]}
    >
      Akros_1
    </a>
  </Link>
  <h2
    className="mock-child"
  >
    Mock child render function
  </h2>
</li>
`;

exports[`src/components/locationIdToNames renders correctly 3`] = `
Array [
  <h2
    className="mock-child"
  >
    Mock child render function
  </h2>,
  <h2
    className="mock-child"
  >
    Mock child render function
  </h2>,
]
`;

exports[`src/components/locationIdToNames works correctly with store 1`] = `
<li
  key="0"
>
  <Link
    replace={false}
    to="/focus-investigation/view/f45b9380-c970-4dd1-8533-9e95ab12f128"
  >
    <a
      href="/focus-investigation/view/f45b9380-c970-4dd1-8533-9e95ab12f128"
      onClick={[Function]}
    >
      Namibia
    </a>
  </Link>
</li>
`;

exports[`src/components/locationIdToNames works correctly with store 2`] = `
<li
  key="1"
>
  <Link
    replace={false}
    to="/focus-investigation/view/3951"
  >
    <a
      href="/focus-investigation/view/3951"
      onClick={[Function]}
    >
      Akros_1
    </a>
  </Link>
</li>
`;
